# statix

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: example.ipynb  simulations_msvst.py  test_sas.py
docs/data/: att.fits  ccf.cif  pnevt-cube.fits  pnevt-cube_inpaint.fits  pnevt-img.fits  pnevt-imgexp.fits  pnevt-summarylist_DETML6.fits  pnevt.fits
src/statix/: background.py  camera.py  counts.py  ebands.py  exposure.py  image.py  inpaint.py  mca.py  mca_transforms.py  plotting.py  psf.py  source_detection.py  timebins.py  utils.py  xmmsas.py
src/statix/data/: psf_EMOS1_1000.fits  psf_EMOS1_1500.fits  psf_EMOS1_2000.fits  psf_EMOS1_2750.fits  psf_EMOS1_3500.fits  psf_EMOS1_4250.fits  psf_EMOS1_6000.fits  psf_EMOS1_8500.fits  psf_EMOS2_1000.fits  psf_EMOS2_1500.fits  psf_EMOS2_2000.fits  psf_EMOS2_2750.fits  psf_EMOS2_3500.fits  psf_EMOS2_4250.fits  psf_EMOS2_6000.fits  psf_EMOS2_8500.fits  psf_EPN_1000.fits  psf_EPN_1500.fits  psf_EPN_2000.fits  psf_EPN_2750.fits  psf_EPN_3500.fits  psf_EPN_4250.fits  psf_EPN_6000.fits  psf_EPN_8500.fits
